# dnsforge

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  RUFF_FORMAT_PROOF.sha256  VERSION  pyproject.toml
.github/workflows/: ci.yml
docs/: 13.x_SUPPORT_POLICY.md  14.0.0_INNOVATION_BRANCH.md  AGENT_API_CONTROL_PLANE.md  AGENT_REGISTRATION.md  AGENT_TRUST_FRAMEWORK.md  AGENT_TRUST_POLICY_ROTATION.md  API.md  ARCHITECTURE.md  BACKUP-RESTORE.md  BASH-LIBS-MIGRATION.md  BIND-ENTERPRISE-LAYOUT.md  BIND-ENTERPRISE-RENDERING.md  BIND-INFRASTRUCTURE-ARCHITECTURE.md  BIND-INTERFACE-DISCOVERY.md  BIND-INTERFACE-OBSERVABILITY.md  BIND-NATIVE-LAYOUT.md  BIND-TEMPLATE-PLACEMENT.md  BIND_INTERFACE_DISCOVERY.md  CENTRAL_INVENTORY.md  CERTIFICATION_MATRIX.md  CI-QUALITY-REPORT.md  CI_CERTIFICATION_POLICY.md  CI_COVERAGE_POLICY.md  CI_RUNTIME_STABILIZATION.md  CLI-COMMAND-ALIGNMENT.md  CLI_API_PARITY.md  CLI_COMPATIBILITY.md  CLUSTER-SYNC-HARDENING.md  CLUSTER-SYNC.md  CLUSTER.md  COMMANDS.md  CONCEPTS.md  CONFIG-GOVERNANCE.md  CONFIGURATION-COMPLIANCE.md  CONFIGURATION-PROFILES.md  CONFIGURATION-SOURCE.md  CONTRACTS.md  COVERAGE_POLICY.md  DDD-BUILD-CONTEXT.md  DEPLOYMENT.md  (+101 more)
docs/RUNBOOKS/: ADD-ZONE.md  APPLY-HARDENING.md  BACKUP-RESTORE.md  DNSSEC-PUBLIC-ZONE.md  DNSSEC-ROLLOVER.md  ENABLE-PROXY-HA.md  FAILOVER-AUTHORITATIVE.md  FAILOVER-PROXY.md  MANAGE-RPZ.md  MONITORING-HEALTHCHECK.md  PRODUCTION-DEPLOYMENT-GATE.md  REMOVE-ZONE.md  RESTORE-SERVER.md  ROTATE-RNDC.md  ROTATE-TSIG.md  RUN-RENDER-AUDIT.md  RUN-VALIDATION.md  SETUP-MONITORING.md  UPGRADE-BIND.md  ZONE-LIFECYCLE.md
docs/SECURITY/: RPZ.md
install/: create-node-settings.sh  install.sh  uninstall.sh  upgrade.sh
src/: dnsAuthoritativeDeploy.sh  dnsProxyDeploy.sh
src/dnsforge/: __init__.py
src/dnsforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/dnsforge_manager/: __init__.py
src/libs/: lib-bind.sh  lib-firewall.sh  lib-inventory.sh  lib-logging.sh  lib-network.sh  lib-permissions.sh  lib-render.sh  lib-rndc.sh  lib-selinux.sh  lib-settings-validate.sh  lib-zone-index.sh
src/tools/: backup-binddns.sh  check-secrets.sh  generate-tsig.sh  generate-zone-catalog.sh  list-backups.sh  restore-binddns.sh  rndc-secret.sh  zone-manager.sh
tests/: conftest.py  lib-test.sh  run-all.sh  run_all.py
tests/api/: test_agent_api_ddd_alignment.py  test_api_foundation.py  test_cli_api_parity_contract.py  test_readiness_api.py
tests/architecture/: test_architecture_gates.py  test_ci_runtime_stabilization.py  test_import_all_modules.py  test_no_bash_business_libs.py  test_oop_layout.py  test_product_audit.py  test_python39_annotations.py  test_python_only_product.py  test_release_check.py  test_release_hygiene.py  test_skip_policy.py  test_template_registry_usage.py
tests/backup/: check-backup-dry-run.sh  check-backup-tools.sh  test_backup_service.py
tests/bind/: test_enterprise_layout.py  test_enterprise_rendering.py  test_generated_bind_config_validation.py  test_live_named_smoke.py  test_template_format.py  test_template_service.py  test_view_scoped_zone_includes.py  test_zone_template_policy.py  test_zone_template_registry.py
tests/catalog/: check-zone-catalog-generate.sh  check-zone-catalog-render.sh  check-zone-manager-negative.sh  check-zone-manager.sh  test_catalog_service.py
tests/cli/: test_cli_commands.py  test_cli_dispatch_alignment.py  test_commands_doc_generation.py  test_config_commands.py  test_migration_render_deploy.py  test_packaged_console_script.py  test_root_privilege_guard.py  test_status_initialization_supplement.py
tests/cluster/: test_cluster_commands.py  test_sync_boundary.py
tests/compliance/: test_compliance_service.py
tests/deploy/: test_deploy_service.py
tests/deployment/: check-production-gate-render.sh  check-production-gate-tools.sh
tests/disaster/: test_disaster_service.py
tests/dns-validation/: check-prerequisites.sh  check-proxy-master-zones.sh  check-rendered-bind-config.sh  check-rendered-zone-files.sh  check-zone-indexes.sh  check-zone-sources.sh
tests/dnssec/: check-catalog-public-dnssec.sh  check-dnssec-enterprise-render.sh  check-dnssec-enterprise-templates.sh  check-dnssec-render.sh  check-dnssec-templates.sh  check-runtime-dnssec.sh  check-runtime-public-zone-dnssec.sh
tests/docs/: test_performance_baseline.py
tests/documentation/: check-doc-headers-footers.sh  check-doc-links.sh  check-doc-navigation.sh  check-docs-index-contexts.sh  check-readme-product-scope.sh
tests/enterprise/: test_ci_enterprise_validation.py  test_ga_readiness_gate.py  test_manager_agent_integration.py  test_platform_support_gate.py  test_upgrade_certification_gate.py
tests/events/: test_event_bus_and_repository.py
tests/initialize/: test_initialize_bind_deploy.py  test_initialize_bind_package_bootstrap.py  test_initialize_native.py  test_initialize_one_shot.py  test_profile_setup_templates.py
tests/install/: test_install_scripts.py  test_upgrade_uninstall_scripts.py
tests/integration/: check-allow-notify-multivip.sh  check-forwarders-multivip.sh  check-primaries-multivip.sh  check-proxy-multivip-render.sh  check-zone-acl-render.sh  check-zone-cluster-routing.sh  render-proxy-multivip.sh
tests/jobs/: test_job_service.py
tests/manager/: test_agent_api_control_plane.py  test_agent_registration.py  test_agent_trust_framework.py  test_agent_trust_policy_rotation.py  test_change_management_v15.py  test_compliance_report.py  test_compliance_trends.py  test_inventory_api.py  test_inventory_compliance_aggregation.py  (+12 more)
tools/: _cli_inventory.py  check_api_coverage.py  check_cli_api_parity.py  check_cli_coverage.py  check_dead_code.py  check_documentation_parity.py  check_enterprise_validation.py  check_event_coverage.py  check_ga_readiness.py  check_manager_postgresql.py  check_operational_readiness.py  check_platform_support.py  check_release_verification.py  check_service_coverage.py  check_upgrade_certification.py  clean.py  generate_commands_doc.py  product_gate.py  quality_report.py  release_check.py
(+403 files in other folders)
