[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dnsforge"
version = "10.6.8.2"
description = "DNSForge - Enterprise BIND deployment and configuration platform"
requires-python = ">=3.9"
readme = "README.md"
authors = [
  { name = "Alfred TCHONDJO" }
]
dependencies = []

[project.scripts]
dnsforge = "dnsforge.interfaces.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["dnsforge*"]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "build>=1.2",
  "bandit[toml]>=1.7",
  "pip-audit>=2.7",
  "mypy>=1.10,<1.18",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
ignore = []

[tool.setuptools.package-data]
dnsforge = [
  "infrastructure/bind/resources/**/*.j2",
  "infrastructure/bind/resources/**/*.tpl",
  "infrastructure/profile/resources/**/*.conf",
  "infrastructure/profile/resources/**/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/dnsforge"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.9"
files = ["src/dnsforge"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
pretty = true
namespace_packages = true
explicit_package_bases = true

# Advisory stage: keep strictness progressive until DNSForge type model is stabilized.
check_untyped_defs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
no_implicit_optional = true
