[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dnsforge"
version = "12.7.3"
description = "DNSForge - Enterprise BIND deployment and configuration platform"
requires-python = ">=3.9"
readme = "README.md"
authors = [
  { name = "Alfred TCHONDJO" }
]
dependencies = []

[project.scripts]
dnsforge = "dnsforge.interfaces.cli.main:main"
dnsforge-manager = "dnsforge_manager.interfaces.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["dnsforge*", "dnsforge_manager*"]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "build>=1.2",
  "bandit[toml]>=1.7",
  "pip-audit>=2.7",
  "mypy>=1.10,<1.18",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
ignore = []

[tool.setuptools.package-data]
dnsforge = [
  "infrastructure/bind/resources/**/*.j2",
  "infrastructure/bind/resources/**/*.tpl",
  "infrastructure/profile/resources/**/*.conf",
  "infrastructure/profile/resources/**/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/dnsforge", "src/dnsforge_manager"]
branch = true
omit = [
  # Entry points and adapters are exercised through contract/integration tests, not unit coverage.
  "src/dnsforge/interfaces/cli/*",
  "src/dnsforge_manager/interfaces/cli/*",
  "src/dnsforge_manager/interfaces/api/app.py",
  "src/dnsforge_manager/interfaces/api/fastapi_app.py",
  "src/dnsforge/infrastructure/*",

  # Host-mutating bootstrap/profile code requires system-level integration environments.
  "src/dnsforge/application/initialize/initialize_authoritative.py",
  "src/dnsforge/application/initialize/initialize_proxy.py",

  # Legacy/progressive coverage backlog retained behind CLI/API/product gates.
  "src/dnsforge/application/cluster/cluster_service.py",
  "src/dnsforge/application/config/config_service.py",
  "src/dnsforge/application/disaster/disaster_service.py",
  "src/dnsforge/application/doctor/doctor_service.py",
  "src/dnsforge/application/drift/drift_service.py",
  "src/dnsforge/application/health/score_service.py",
  "src/dnsforge/application/history/history_service.py",
  "src/dnsforge/application/migration/migration_service.py",
  "src/dnsforge/application/profile/profile_auditor.py",
  "src/dnsforge/application/output/table_formatter.py",
  "src/dnsforge/application/render/render_authoritative.py",
  "src/dnsforge/application/render/render_proxy.py",
  "src/dnsforge/application/security/security_service.py",
  "src/dnsforge/application/reports/report_service.py",
  "src/dnsforge/application/security/acl/*",
  "src/dnsforge/application/security/rpz/*",
  "src/dnsforge/application/security/view/*",
  "src/dnsforge/application/security/dnssec/dnssec_service.py",
  "src/dnsforge/application/validate/*",
  "src/dnsforge/application/zone/zone_manager.py",

  # Thin API facades are covered by parity/contract tests; service behavior is measured underneath.
  "src/dnsforge/interfaces/api/*",

  # Defensive domain validators/parser matrices are covered progressively by dedicated hardening tests.
  "src/dnsforge/domain/cluster/validator.py",
  "src/dnsforge/domain/health/model.py",
  "src/dnsforge/domain/profile/model.py",
  "src/dnsforge/domain/profile/validator.py",
  "src/dnsforge/domain/security/validator.py",
  "src/dnsforge/domain/services/*",
  "src/dnsforge/domain/zone/record.py",

  # Manager persistence adapters and optional web entrypoints are integration-covered.
  "src/dnsforge_manager/infrastructure/*",
  "src/dnsforge_manager/application/dnsbeat/dnsbeat_service.py",
  "src/dnsforge/application/output/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.9"
files = ["src/dnsforge", "src/dnsforge_manager"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
pretty = true
namespace_packages = true
explicit_package_bases = true

# Advisory stage: keep strictness progressive until DNSForge type model is stabilized.
check_untyped_defs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
no_implicit_optional = true
